# Labs

./: .gitignore  CMakeLists.txt  sonar-project.properties  test.c
.github/workflows/: build.yml
Lab6/: Task1.c
includes/: arrays.h  inp_out.h
lab1/: task1.c
lab2/: task1.c
lab3/: task1.c  task2.c
lab4/: task1.c  task2.c  task3.c
lab5/: Task1.c  task3.c
src/includes/: CMakeLists.txt  arrays.h  inp_out.h  sorts.h  strings.h
src/includes/headers/: arrays.h  deck.h  files.h  helpers.h  inp_out.h  lab3.h  lab4.h  queue.h  sorts.h  stack.h  strings.h
src/includes/src/: arrays.c  deck.c  files.c  helpers.c  inp_out.c  lab3.c  lab4.c  queue.c  sorts.c  stack.c  strings.c
src/lab1/: task2.c  task3.c
src/lab2/: task2.c
src/lab3/: task3.c
src/lab4/: task1.c  task2.c  task3.c
src/lab5/: Task1.c  Task2.c  task3.c
src/lab6/: Task1.c  task2.c
src/lab7/: task1.c
src/part 1/lab1/: task4.c
src/part 1/lab2/: task3.c
src/part 1/lab3/: task3.c
src/part 1/lab4/: task3.c
src/part 1/lab6/: Task1.c
src/part 2/lab3/: task1.c  task2.c
src/part 2/lab4/: lab4.c
src/part 2/lab5/: task1.c  task2.c  task3.c
src/part 2/lab6/: task1.c  task2.c  task3.c
